combined results into res for smt and code refactoring

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,6 @@ MIP/__pycache__/
 MIP/result_nosymbreak/
 MIP/result_symbreak/
 SMT/__pycache__/
-SMT/solutions/
+SMT/result_nosymbreak/
+SMT/result_symbreak/
 res
